--- a/HTML/search.html
+++ b/HTML/search.html
@@ -15,7 +15,7 @@
     <!-- FIRST SCREEN / HEADER START -->
     <section class="first--screen">
       <header class="main-header">
-        <div class="flex--container">
+        <div class="header--flex">
           <h1 class="gkg gkg--lrg">
             GOLD <br />
             KEY <br />
