added drop shadow mixin, details to footer, header and index

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,22 +32,10 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum in
-          amet dignissimos earum vel officia exercitationem hic delectus
-          quisquam soluta. Quae sit expedita recusandae inventore.
+          If you're looking for the best realtors in Orlando, FL, you've come to the right place! Read on for more details on how to hire our service.
         </p>
       </header>
-      <div class="header--b--icons">
-        <a href="https://www.facebook.com/goldkeyorlando/">
-          <svg class="fab fa-facebook-f"></svg>
-        </a>
-        <a href="#">
-          <svg class="fab fa-instagram"></svg>
-        </a>
-        <a href="#">
-          <svg class="fab fa-twitter"></svg>
-        </a>
-      </div>
+
       <div class="header--icons">
         <a href="../HTML/index.html#home">
           <svg class="fas fa-home"></svg>
@@ -57,6 +45,18 @@
         </a>
         <a href="#">
           <svg class="fas fa-phone"></svg>
+        </a>
+      </div>
+
+      <div class="header--b--icons">
+        <a href="https://www.facebook.com/goldkeyorlando/">
+          <svg class="fab fa-facebook-f"></svg>
+        </a>
+        <a href="#">
+          <svg class="fab fa-instagram"></svg>
+        </a>
+        <a href="#">
+          <svg class="fab fa-twitter"></svg>
         </a>
       </div>
 
@@ -276,6 +276,21 @@
     <footer>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat,
       molestiae!
+      <div class="footer--grid">
+
+        <div class="footer--b--icons">
+          <a href="https://www.facebook.com/goldkeyorlando/">
+            <svg class="fab fa-facebook-f"></svg>
+          </a>
+          <a href="#">
+            <svg class="fab fa-instagram"></svg>
+          </a>
+          <a href="#">
+            <svg class="fab fa-twitter"></svg>
+          </a>
+        </div>
+      </div>
+      <div class="copy"> &copy; 2020 Gold Key Group </div>
     </footer>
     <!-- FOOTER END -->
   </body>
