added animated favicon, why us section, and media query for 790. edited form and header

--- a/HTML/search.html
+++ b/HTML/search.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GKG | Search</title>
+    <meta
+      name="description"
+      content="Gold Key Group is part of Realty Revolution, where you can find some of the finest realtors in Orlando"
+    />
+    <meta
+      name="keywords"
+      content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment"
+    />
+    <title>Gold Key Group - Search for a Home</title>
+
     <link rel="stylesheet" href="../CSS/main/main.css" />
+    <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
+
     <script
       src="https://kit.fontawesome.com/76fa9a81bb.js"
       crossorigin="anonymous"
@@ -43,7 +54,7 @@
     </section>
     <!-- FIRST SCREEN / HEADER END -->
     <!-- TOP NAVBAR START -->
-    <div class="nav--bg" id="home">
+    <div class="nav--bg">
       <nav id="main--nav">
         <h3 class="gkg">GKG</h3>
         <ul>
