--- a/HTML/index.html
+++ b/HTML/index.html
@@ -140,7 +140,7 @@
             <a href="#" class="blog--box">
               <img src="../Images/faq.jpeg" alt="#" class="blog--img">
                 <h3 class="blog--title gkg">
-                  Investor's FAQ 2.0
+                  Investor's FAQ
                 </h3>
               <p class="blog--p">
                 <!-- LOREM 15 -->
