--- a/HTML/index.html
+++ b/HTML/index.html
@@ -153,7 +153,7 @@
               </p>
             </a>
             <a href="#" class="blog--box">
-              <img src="../Images/b2b-2.png" alt="" class="blog--img">
+              <img src="../Images/open-box.png" alt="" class="blog--img">
                 <h3 class="blog--title gkg">
                   Relocation
                 </h3>
@@ -162,7 +162,7 @@
               </p>
             </a>
             <a href="#" class="blog--box">
-              <img src="../Images/faq.jpeg" alt="#" class="blog--img">
+              <img src="../Images/deal.jpeg" alt="#" class="blog--img">
                 <h3 class="blog--title gkg">
                   Why work with a real estate professional
                 </h3>  
@@ -247,7 +247,7 @@
               <h3 class="gkg ts">Extensive market knowledge</h3>
             </div>
             <div class="why--us--box--p">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quibusdam illum reprehenderit saepe impedit tenetur modi esse ad dolorem ab?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero suscipit quis tenetur maiores enim?</p>
             </div>
           </div>
           <div class="why--us--box">
@@ -255,7 +255,7 @@
               <h3 class="gkg ts">Strong negotiation skills</h3>
             </div>
             <div class="why--us--box--p">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quibusdam illum reprehenderit saepe impedit tenetur modi esse ad dolorem ab?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero suscipit quis tenetur maiores enim?</p>
             </div>
           </div>
           <div class="why--us--box">
@@ -263,7 +263,7 @@
               <h3 class="gkg ts">Experienced Agents</h3>
             </div>
             <div class="why--us--box--p">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quibusdam illum reprehenderit saepe impedit tenetur modi esse ad dolorem ab?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero suscipit quis tenetur maiores enim?</p>
             </div>
           </div>
           <div class="why--us--box">
@@ -272,7 +272,9 @@
             </div>
             <div class="why--us--box--p">
               <p>
-                We are always happy to help people outisde of the US investing their money wisely; we know the process like the back of our hand!
+                Investing in Orlando Real Estate will <em>make your money <b>work for you</b></em>.
+                <br>
+                Don't lose this great oportunity!
               </p>
             </div>
           </div>
@@ -281,7 +283,7 @@
               <h3 class="gkg ts">Staging available</h3>
             </div>
             <div class="why--us--box--p">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quibusdam illum reprehenderit saepe impedit tenetur modi esse ad dolorem ab?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero suscipit quis tenetur maiores enim?</p>
             </div>
           </div>
           <div class="why--us--box">
@@ -289,7 +291,7 @@
               <h3 class="gkg ts">Relocation assistance</h3>
             </div>
             <div class="why--us--box--p">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quibusdam illum reprehenderit saepe impedit tenetur modi esse ad dolorem ab?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero suscipit quis tenetur maiores enim?</p>
             </div>
           </div>
           
