added animation and extra efects to .blogs--a

--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -72,7 +72,7 @@
         >
           <svg class="fas fa-envelope"></svg>
         </a>
-        <a href="../HTML/index.html#phone--numbers">
+        <a href="../HTML/index.html#about">
           <svg class="fas fa-phone"></svg>
         </a>
       </div>
@@ -101,8 +101,8 @@
       <nav id="main--nav">
         <h3 class="gkg"><a href="index.html">GKG</a></h3>
         <ul>
-          <li><a href="../HTML/index.html#blogs--in--main">Blogs</a></li>
-          <li><a href="../HTML/index.html#phone--numbers">About us</a></li>
+          <li><a href="../HTML/index.html#blog">Blogs</a></li>
+          <li><a href="../HTML/index.html#about">About us</a></li>
           <li><a href="../HTML/index.html#why--us">Why us</a></li>
           <li><a href="../HTML/index.html#contact">Contact</a></li>
           <li><a href="../HTML/search.html" target="_blank">SEARCH</a></li>
