--- a/HTML/search.html
+++ b/HTML/search.html
@@ -66,7 +66,7 @@
       >
         <svg class="fas fa-envelope"></svg>
       </a>
-      <a href="../HTML/index.html#phone--numbers">
+      <a href="../HTML/index.html#about">
         <svg class="fas fa-phone"></svg>
       </a>
     </div>
@@ -105,8 +105,8 @@
       <nav id="main--nav">
         <h3 class="gkg"><a href="index.html">GKG</a></h3>
         <ul>
-          <li><a href="../HTML/index.html#blogs--in--main">BLOGS</a></li>
-          <li><a href="../HTML/index.html#phone--numbers">ABOUT</a></li>
+          <li><a href="../HTML/index.html#blog">BLOGS</a></li>
+          <li><a href="../HTML/index.html#about">ABOUT</a></li>
           <li><a href="../HTML/index.html#why--us">WHY US</a></li>
           <li><a href="../HTML/index.html#contact">CONTACT</a></li>
           <li><a href="../HTML/search.html" target="_blank">SEARCH</a></li>
@@ -134,7 +134,7 @@
       >
         <svg class="fas fa-envelope"></svg>
       </a>
-      <a href="../HTML/index.html#phone--numbers">
+      <a href="../HTML/index.html#about">
         <svg class="fas fa-phone"></svg>
       </a>
     </div>
@@ -204,7 +204,7 @@
         #################################
         -->
     <nav id="bottom--nav">
-      <a href="#blogs--in--main"><svg class="fas fa-arrow-circle-up"></svg></a>
+      <a href="#blog"><svg class="fas fa-arrow-circle-up"></svg></a>
     </nav>
     <!-- 
         #################################
