changes in id's

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <div id="contact--nav" id="phone--bar">
+    <div id="contact--nav">
       Maria Zendejas: 
       <a href="tel:407-913-0154" title="Call Maria">
         (407)-913-0154
