modified header, footer, form, added welcome screen, and translate/number navbar

--- a/HTML/basic.html
+++ b/HTML/basic.html
@@ -52,3 +52,46 @@
     <footer></footer>
   </body>
 </html>
+
+
+<!-- SECTION TO BE PASTED AT THE BOTTOM OF INDEX WHEN BLOGS ARE FINISHED -->
+
+<section class="screen" id="blogs--section">
+  <div class="content">
+    <h2 class="gkg text--shadow section--title" id="blog">
+      Latest Blogs
+    </h2>
+    <div class="blog--flex">
+      <a href="#" class="blog--box">
+        <img src="../Images/faq.jpeg" alt="Blog added on x/y/z" class="blog--img">
+        <h3 class="blog--title gkg">
+          Investor's FAQ
+        </h3>
+        <p class="blog--p">
+          <!-- LOREM 15 -->
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque blanditiis ullam accusamus eius velit adipisci?
+        </p>
+      </a>
+      <a href="#" class="blog--box">
+        <img src="../Images/open-box.png" alt="Blog added on x/y/z" class="blog--img">
+        <h3 class="blog--title gkg">
+          Relocation
+        </h3>
+        <p class="blog--p">
+          <!-- LOREM 15 -->
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque blanditiis ullam accusamus eius velit adipisci?
+        </p>
+      </a>
+      <a href="#" class="blog--box">
+        <img src="../Images/deal.jpeg" alt="Blog added on x/y/z" class="blog--img">
+        <h3 class="blog--title gkg">
+          Why work with a real estate professional
+        </h3>
+        <p class="blog--p">
+          <!-- LOREM 15 -->
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque blanditiis ullam accusamus eius velit adipisci?
+        </p>
+      </a>
+    </div>
+  </div>
+</section>
