--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,7 +29,7 @@
     <div id="upper--nav">
       <span>
           Hablamos
-          <em><a href="#ESP" title="Click to translate" style="padding: .2em;">Español</a>!</em>
+          <em><a href="#ESP" title="Click to translate" style="padding: .2em;">Español</a></em>
           </span>
           <span>
         Maria Zendejas:
@@ -75,7 +75,7 @@
           <svg class="fab fa-facebook-square"></svg>
         </a>
         <a href="https://www.instagram.com/goldkey_orlando/" target="_blank">
-          <svg class="fab fa-instagram-square"></svg>
+          <svg class="fab fa-instagram"></svg>
         </a>
       </div>
 
@@ -635,25 +635,12 @@
         </div>
       </div>
     </footer>
-    <!-- 
-    #################################                                            $$$$$$$$$$
-              FOOTER END                                                         $$$$$$$$$$
-    #################################                                            $$$$$$$$$$
-    -->
-    <!-- 
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-              BOTOM NAV START       #################################$$$$$$$$$$  $$$$$$$$$$
-    #################################################################$$$$$$$$$$  $$$$$$$$$$
-    -->
+    <!--############################# 
+        # BOTTOM NAV
+     -->
     <nav id="bottom--nav">
       <a href="#welcome"><svg class="fas fa-arrow-circle-up"></svg>
       </a>
     </nav>
-    <!-- 
-    #################################                                            $$$$$$$$$$
-              BOTTOM NAV END                                                     $$$$$$$$$$
-    #################################                                            $$$$$$$$$$
-    -->
   </body>
-
 </html>
