fixed why us box

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -109,7 +109,7 @@
     <div id="top--nav">
       <nav id="main--nav">
         <h2 class="gkg">
-          <a href="index.html"> GKG </a>
+          <a href="#welcome--section"> GKG </a>
         </h2>
 
         <ul>
