--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -279,7 +279,7 @@
                 <textarea
                   name="message"
                   id="message"
-                  form="form--contact--us"
+                  form="form--SELL"
                   cols="30"
                   rows="8"
                   style="resize: none"
